--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "license": "Apache-2.0",
     "dependencies": {
         "cordova-android": "7.0.0",
-        "cordova-ios": "^4.5.4",
         "cordova-plugin-whitelist": "^1.3.3"
     },
     "cordova": {
@@ -19,8 +18,7 @@
             "cordova-plugin-whitelist": {}
         },
         "platforms": [
-            "android",
-            "ios"
+            "android"
         ]
     },
     "devDependencies": {
